--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,6 +21,18 @@ jobs:
       - name: Build Docker image
         run: docker build -t day5-demo .
 
+      - name: Login Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Tag image
+        run: docker tag day5-demo ${{ secrets.DOCKER_USERNAME }}/day5-demo:latest
+
+      - name: Push image
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/day5-demo:latest
+
+
+
+
   cd:
     needs: ci
     runs-on: ubuntu-latest
