--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,13 +22,13 @@ jobs:
         run: docker build -t day5-demo .
 
       - name: Login Docker Hub
-        run: echo "${{ dckr_pat_-HzjZjfEtuXs_wMdUDzuD4ztw5U }}" | docker login -u "${{ keval2410 }}" --password-stdin
+        run:  echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Tag image
-        run: docker tag day5-demo ${{ keval2410 }}/day5-demo:latest
+     - name: Tag image
+       run: docker tag day5-demo ${{ secrets.DOCKER_USERNAME }}/day5-demo:latest
 
-      - name: Push image
-        run: docker push ${{ keval2410 }}/day5-demo:latest
+     - name: Push image
+       run: docker push ${{ secrets.DOCKER_USERNAME }}/day5-demo:latest
 
 
 
